--- a/public/index.html
+++ b/public/index.html
@@ -7,21 +7,21 @@
     <!-- Descripción de la página -->
     <meta
       name="description"
-      content="Bienvenidos a lalocadelasplantas.cl, tu vivero urbano digital"
+      content="Inventory Manager "
     /> 
     <!-- Fuente de la página -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Iconos de la página -->
 
-    <link rel="apple-touch-icon" sizes="180x180" href="https://ezcbvdobzemkdzwavevc.supabase.co/storage/v1/object/public/lalocadelasplantas/logos/Tienda%20Digital%20(5).png">
-    <link rel="icon" type="image/png" sizes="192x192" href="https://ezcbvdobzemkdzwavevc.supabase.co/storage/v1/object/public/lalocadelasplantas/logos/Tienda%20Digital%20(5).png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://ezcbvdobzemkdzwavevc.supabase.co/storage/v1/object/public/lalocadelasplantas/logos/Tienda%20Digital%20(5).png">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://ezcbvdobzemkdzwavevc.supabase.co/storage/v1/object/public/lalocadelasplantas/logos/Tienda%20Digital%20(5).png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://ezcbvdobzemkdzwavevc.supabase.co/storage/v1/object/public/lalocadelasplantas/logos/Tienda%20Digital%20(5).png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/icon/iconoBU.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./images/icon/iconoBU.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/icon/iconoBU.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./images/icon/iconoBU.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/icon/iconoBU.png">
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="https://ezcbvdobzemkdzwavevc.supabase.co/storage/v1/object/public/lalocadelasplantas/logos/Tienda%20Digital%20(5).png">    
-    <title>lalocadelasplantas.cl</title>
+    <meta name="msapplication-TileImage" content="./images/icon/iconoBU.png">    
+    <title>bucont.com - inventory manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
