--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="./images/icon/iconoBU.png">    
-    <title>bucont.com - inventory manager</title>
+    <title>Gestor de tienda - bucont</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
